Updated Configurable interface